Fix overflow auto for lists

--- a/app/assets/stylesheets/categories.scss
+++ b/app/assets/stylesheets/categories.scss
@@ -5,7 +5,7 @@ $green_color: #5fb523;
 $grey_color: #434b54;
 
 .categories_section {
-  height: 40vh;
+  height: 75vh;
   display: flex;
   flex-direction: column;
 }
@@ -13,7 +13,8 @@ $grey_color: #434b54;
 .categories_major_div {
   display: flex;
   flex-direction: column;
-  max-height: 60%;
+  max-height: 100%;
+  overflow-y: auto;
   a {
     text-decoration: none;
     font-family: $font_text;
@@ -91,38 +92,5 @@ $grey_color: #434b54;
     color: black;
     font-weight: bold;
     margin: 0 1rem 0 0;
-  }
-}
-
-.expense_div {
-  position: relative;
-  display: flex;
-  margin: 0.5rem;
-  justify-content: space-between;
-  align-items: center;
-  border: 1px solid grey;
-  border-radius: 5px;
-  height: 5rem;
-  color: $grey_color;
-  font-family: $font_text;
-  font-weight: bold;
-  img {
-    height: 80%;
-    width: 20%;
-  }
-  .name {
-    margin: 0 0 2rem 1rem;
-    font-size: 1.5rem;
-  }
-  .time {
-    position: absolute;
-    bottom: 0;
-    left: 1rem;
-    margin: 0;
-    color: rgb(185, 185, 185);
-  }
-  .amount {
-    color: black;
-    margin-right: 1rem;
   }
 }
